Añadido el título de cabecera h1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="container">
+    <h1>Un ejemplo de Bootstrap 4</h1>
     <div class="float-left">Float left on all viewport sizes</div><br>
     <div class="float-right">Float right on all viewport sizes</div><br>
     <div class="float-none">Don't float on all viewport sizes</div>
